--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ footer
 
 
 #education {
-    position:relative;
+    position: relative;
     background-image: url(Images/black-and-white-blank-notebook-158829.jpg);
     background-repeat: no-repeat;
      width:450px;
@@ -91,8 +91,10 @@ footer
 }
 #education:hover{
     background-size:120%;
+    border: 505px;
 }
 #education:after{
+    border: 505px;
     padding: 8px;
     position: absolute;
     top: 0;
@@ -109,11 +111,13 @@ footer
 }
 #education:hover:after
 {
+    border: 505px;
     opacity: 1;
     top:0;
 }
 
 #techskills {
+    border: 505px;
     position:relative;
   background-image: url(Images/black-and-white-computer-display-220357.jpg);
     background-repeat: no-repeat;
@@ -126,9 +130,11 @@ footer
     transition: 0.3s;
 }
 #techskills:hover{
+    border: 505px;
     background-size:120%;
 }
 #techskills:after{
+    border: 505px;
    padding: 8px;
     position: absolute;
     top: 0;
@@ -145,11 +151,13 @@ footer
 }
 #techskills:hover:after
 {
+    border: 505px;
     opacity: 1;
     top:0;
 }
 
 #gamedev {
+    border: 505px;
     position:relative;
    background-image: url(Images/action-blur-close-up-735911.jpg);
     background-repeat: no-repeat;
@@ -162,10 +170,11 @@ footer
     transition: 0.3s;
 }
 #gamedev:hover{
+    border: 505px;
     background-size:120%;
 }
 #gamedev:after{
-    
+    border: 505px;
     padding: 8px;
     position: absolute;
     top: 0;
@@ -183,6 +192,7 @@ footer
 }
 #gamedev:hover:after
 {
+    border: 505px;
     opacity: 1;
     top:0;
 }
