--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ footer
 
 
 #education {
+    border: 505px;
     position: relative;
     background-image: url(Images/black-and-white-blank-notebook-158829.jpg);
     background-repeat: no-repeat;
