--- a/style.css
+++ b/style.css
@@ -11,10 +11,15 @@ font-family: "Times New Roman",Times,serif;
 }
 img
 {
+  
     margin-left: auto;
     margin-right: auto;
-   display:block;
+   display: block;
+   position: relative;
 }
+
+
+
 a
 {
     color: white
